# pick-place-robo

./: .gitignore  README.md  pyproject.toml  run_baselines.py  run_experiments.sh  train.py
config/: config.py
results/: pick_place_150ep.json
scripts/: patch_detr.py
sim/: collect_data.py  env.py  evaluate_sim.py  scripted_expert.py  visualize.py
training/: policy.py  utils.py
